fixed xs display padding overflow issue

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -239,3 +239,10 @@ $link-color: black;
   color: #0f0 !important;
   outline: solid #f00 1px !important;
 }
+
+@media (max-width: 767px){
+  .container {
+    padding: 0;
+    overflow-x: 0;
+  }
+}
